--- a/default.css
+++ b/default.css
@@ -10,18 +10,6 @@ body {
   color: #DDDDDD;
 }
 
-h2 {
-  font-weight: normal;
-}
-
-h3 {
-  font-weight: normal;
-}
-
-a {
-  color: #444444;
-}
-
 /* Straight-up stole the below from https://www.w3schools.com/howto/howto_css_navbar_icon.asp , with some tweaks. */
 .navbar {
   width: 100%;
@@ -55,4 +43,18 @@ a {
     float: none;
     display: block;
   }
+}
+
+/* End thievery. */
+
+h2 {
+  font-weight: normal;
+}
+
+h3 {
+  font-weight: normal;
+}
+
+a {
+  color: #444444;
 }
