--- a/default.css
+++ b/default.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   background-color: #222222;
 }
 
@@ -7,7 +7,8 @@ body {
   max-width: 1200px;
   margin: auto;
   padding-top: 15px;
-}
+  color: #DDDDDD;
+} */
 
 /* Straight-up stole the below from https://www.w3schools.com/howto/howto_css_navbar_icon.asp , with some tweaks. */
 .navbar {
@@ -46,7 +47,7 @@ body {
 
 /* End thievery. */
 
-h2 {
+/* h2 {
   font-weight: normal;
 }
 
@@ -56,4 +57,4 @@ h3 {
 
 a {
   color: #444444;
-}
+} */
