--- a/default.css
+++ b/default.css
@@ -1,8 +1,8 @@
-/* html {
+html {
   background-color: #222222;
 }
 
-body {
+/* body {
   font-family: sans, 'Roboto';
   max-width: 1200px;
   margin: auto;
