--- a/default.css
+++ b/default.css
@@ -47,7 +47,7 @@ body {
 
 /* End thievery. */
 
-/* h2 {
+h2 {
   font-weight: normal;
 }
 
@@ -57,4 +57,4 @@ h3 {
 
 a {
   color: #444444;
-} */
+}
